dynamic port feature

--- a/example_cfgs/sky130.cfg
+++ b/example_cfgs/sky130.cfg
@@ -18,11 +18,17 @@
   # The minimum pin pitch for signal pins (all pins will have a pitch that is a
   # multuple of this pitch. The first pin will be a multiple of this pitch from
   # the bottom edge of the macro too.
-  "pinPitch_nm": 600,
+  "pinPitch_nm": 680,
 
   # Optional: snap the width and height of the sram to a multiple value.
   "snapWidth_nm":   460,
   "snapHeight_nm": 2720,
+
+  # Manufacturing grid spacing for valid pin placement
+  "manufacturing_grid_nm": 5,
+
+  # How many bitlines are multiplexed together
+  "column_mux_factor": 1,
 
   # Flips the pin orientations. Non-fliped assumes metal1 is vertical therefore
   # supply pins on metal4 will be horizontal and signal pins will also be on
@@ -31,31 +37,55 @@
   "flipPins": true,
 
   # List of SRAM configurations (name, width, depth, and banks)
-  "srams": [
-    {
-      "name": "fakeram_32x384_1rw1r",
-      "width": 32,
-      "depth": 384,
-      "banks": 1,
-      "write_mode": "write_first",
-      "ports": "1rw1r",
-      "port_clks" : "[0], [1], []"
+  "srams": [ 
+    {"name": "testram_1rw_32w384d_4_sram", 
+     "width": 32,
+     "depth": 384,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 4,
+     "r": 0,
+     "w": 0,
+     "rw": [1, "left"]
     },
-    {
-      "name": "fakeram_20x64_2r1w",
-      "width": 20,
-      "depth": 64,
-      "banks": 1,
-      "ports": "2r1w",
-      "port_clks" : "[], [1], [1]"
+    {"name": "testram_1r_16w128d_8_sram", 
+     "width": 16,
+     "depth": 128,
+     "banks": 1,
+     "write_mode": "read_first",
+     "write_granularity": 8,
+     "r": [1, "right"],
+     "w": 0,
+     "rw": 0
     },
-    {
-      "name": "fakeram_512x1024_1r1w",
-      "width": 512,
-      "depth": 1024,
-      "banks": 1,
-      "ports": "1r1w",
-      "port_clks" : "[], [1], [1]"
+    {"name": "testram_1w_64w256d_16_sram", 
+     "width": 64,
+     "depth": 256,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 16,
+     "r": 0,
+     "w": [1, "left"],
+     "rw": 0
+    },
+    {"name": "testram_2rw_32w1024d_sram", 
+     "width": 32,
+     "depth": 1024,
+     "banks": 1,
+     "write_mode": "read_first",
+     "r": 0,
+     "w": 0,
+     "rw": [2, "right"]
+    },
+    {"name": "testram_1r1w_8w64d_4_sram", 
+     "width": 8,
+     "depth": 64,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 4,
+     "r": [1, "left"],
+     "w": [1, "right"],
+     "rw": 0
     }
   ]
 }
