--- a/example_cfgs/asap7.cfg
+++ b/example_cfgs/asap7.cfg
@@ -1,6 +1,13 @@
-# ABKGroup's FakeRAM2.0 config, added to allow dynamic RAM generation of asap7 tech
-
+#SAMPLE INPUT FILE; VALUES NOT REALISTIC
 {
+
+  # Use cacti or custom config
+  "custom_tech_name": "asap7",
+  
+  # Optional if want to run with cacti, if set to true, values from yaml 
+  # file will override values written from cacti.
+  "hybrid": false,
+
   # The process node.
   "tech_nm": 7,
 
@@ -9,6 +16,9 @@
 
   # String to add in front of every metal layer number for the layer name.
   "metalPrefix": "M",
+
+  # Horizontal Metal layer for macro pins
+  "metal_layer": "M4",
  
   # The pin width for signal pins.
   "pinWidth_nm": 24,
@@ -16,33 +26,74 @@
   # The minimum pin pitch for signal pins 
   "pinPitch_nm": 48,
 
-  # Metal track pitch  
-  "metal_track_pitch_nm": 48, 
-
-  # Manufacturing Grid 
+  # Manufacturing grid spacing for valid pin placement
   "manufacturing_grid_nm": 1,
 
-  # Contacted Poly Pitch
-  "contacted_poly_pitch_nm": 54,
-
-  #column mux factor
+  # How many bitlines are multiplexed together
   "column_mux_factor": 1,
-
-  # Fin pitch
-  "fin_pitch_nm" : 27,
-
-  # Flip Pins = false for M4, true for M3
-  "flipPins": false,
 
   # Optional snap the width and height of the sram to a multiple value.
   "snap_width_nm":  190,
   "snap_height_nm": 1400,
 
-  
+  # Flips the pin orientations. Non-fliped assumes metal1 is vertical therefore
+  # supply pins on metal4 will be horizontal and signal pins will also be on
+  # metal4. If set to true, supply pins on metal4 will be vertical and signal
+  # pins will be on metal3.
+  "flipPins": "false",
+
   # List of SRAM configurations (name width depth and banks)
   "srams": [ 
-    {"name": "fakeram7_64x21", "width": 21, "depth": 64, "banks": 2, "ports": "1rw", "port_clks": "[0], [], []"},
-    {"name": "fakeram7_256x34", "width": 34, "depth": 256, "banks": 2, "ports": "1rw", "port_clks": "[0], [], []"},
-    {"name": "fakeram7_2048x39", "width": 39, "depth": 2048, "banks": 4, "ports": "1rw", "port_clks": "[0], [], []"}
-  ] 
+    {"name": "testram_1rw_32w384d_4_sram", 
+     "width": 32,
+     "depth": 384,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 4,
+     "r": 0,
+     "w": 0,
+     "rw": [1, "left"]
+    },
+    {"name": "testram_1r_16w128d_8_sram", 
+     "width": 16,
+     "depth": 128,
+     "banks": 1,
+     "write_mode": "read_first",
+     "write_granularity": 8,
+     "r": [1, "right"],
+     "w": 0,
+     "rw": 0
+    },
+    {"name": "testram_1w_64w256d_16_sram", 
+     "width": 64,
+     "depth": 256,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 16,
+     "r": 0,
+     "w": [1, "left"],
+     "rw": 0
+    },
+    {"name": "testram_2rw_32w1024d_sram", 
+     "width": 32,
+     "depth": 1024,
+     "banks": 1,
+     "write_mode": "read_first",
+     "r": 0,
+     "w": 0,
+     "rw": [2, "right"]
+    },
+    {"name": "testram_1r1w_8w64d_4_sram", 
+     "width": 8,
+     "depth": 64,
+     "banks": 1,
+     "write_mode": "write_first",
+     "write_granularity": 4,
+     "r": [1, "left"],
+     "w": [1, "right"],
+     "rw": 0
+    }
+  ]
+  
+  # TENTATIVE PARAMETERS 
 }
