--- a/example_cfgs/asap7.cfg
+++ b/example_cfgs/asap7.cfg
@@ -1,11 +1,13 @@
 #SAMPLE INPUT FILE; VALUES NOT REALISTIC
 {
 
-  # Use cacti or custom config
+  # Name of yaml file
   "custom_tech_name": "asap7",
   
-  # Optional if want to run with cacti, if set to true, values from yaml 
-  # file will override values written from cacti.
+  # If set to false means the tool will not use CACTI for memory 
+  # modeling; it will use only the values provided in the YAML config file.
+  # If set to true, the tool would run CACTI and then override any CACTI
+  # generated values with those specified in the YAML file.
   "hybrid": false,
 
   # The process node.
